# lab_integral_cuda

./: CMakeLists.txt  README.md  graphs.ipynb  test_runner.py
integral/: functions.cu  functions.cuh  main.cu
